--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
     <section class="lure-content">
         <div class="lure-container">
             <article class="lure-article">
-                <div class="lure-article-section">
+                <div class="lure-article-section ">
                     <h2 class="lure-h2">Be always first</h2>
                     <p class="lure-p lure-redish">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </p>
                 </div>
-                <div class="lure-article-section">
+                <div class="lure-article-section mac-section">
                     <img class="mac" src="assets/Macbook.png" alt="">
                 </div>
             </article>
             <article class="lure-article">
-                <div class="lure-article-section">
+                <div class="lure-article-section iphone-section">
                     <img class="iphone" src="assets/iPhone.png" alt="">
                 </div>
                 <div class="lure-article-section">
@@ -121,7 +121,7 @@
 
 
                 </div>
-                <div class="lure-article-section">
+                <div class="lure-article-section trumpet-section">
                     <img class="trumpet" src="assets/Trumpet.png" alt="">
                 </div>
             </article>
